syntax = "proto3";

package proto;

message CreateRequest {
    string name = 1;
    string email = 2;
    string phoneNo = 3;
    string organization = 4;
    string password = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message Response{
    int32 code = 1;
    string message = 2;
}

message TokenResponse{
    int32 code = 1;
    string token = 2;
}

message TokenRequest{
    string token = 1;
}

message UpdateRequest{
    string phoneNo = 1;
    string organization = 2;
    string token = 3;
}

message UserResponse{
    string name = 1;
    string email = 2;
    string phoneNo = 3;
    string organization = 4;
}

service CrudService {
    rpc Create(CreateRequest) returns (Response);
    rpc Login(LoginRequest) returns (TokenResponse);
    rpc GetUser(TokenRequest) returns (UserResponse);
    rpc UpdateUser(UpdateRequest) returns (Response);
    rpc DeleteUser(TokenRequest) returns (Response);    
}